@@ -12,4 +12,5 @@
             </intent-filter>
         </activity>
     </application>
+    <uses-sdk android:minSdkVersion="12" />
 </manifest>
